{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 144,
  "lineage": "5fa70d6b-c97f-27d4-419b-f518f386b1a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "arroyo_ecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:internet-gateway/igw-05cd67093f764b71d",
            "id": "igw-05cd67093f764b71d",
            "owner_id": "302570658486",
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "dependencies": [
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-ecs-arroyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:302570658486:loadbalancer/app/lb-ecs-arroyo/657ee470dbce66bc",
            "arn_suffix": "app/lb-ecs-arroyo/657ee470dbce66bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-ecs-arroyo-285194508.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:302570658486:loadbalancer/app/lb-ecs-arroyo/657ee470dbce66bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-ecs-arroyo",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05218acf0717e0a28"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02fed4577ac7c7ad8"
              },
              {
                "subnet_id": "subnet-030ee9cf06446a3da"
              }
            ],
            "subnets": [
              "subnet-02fed4577ac7c7ad8",
              "subnet-030ee9cf06446a3da"
            ],
            "vpc_id": "vpc-0efd064f0c9a591e4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_subnet.arroyo_subnet_1",
            "aws_subnet.arroyo_subnet_2",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:302570658486:listener/app/lb-ecs-arroyo/657ee470dbce66bc/3aaf47d9abfd3144",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:302570658486:targetgroup/lb-target-ecs-arroyo/c7941f3e07984741",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:302570658486:listener/app/lb-ecs-arroyo/657ee470dbce66bc/3aaf47d9abfd3144",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:302570658486:loadbalancer/app/lb-ecs-arroyo/657ee470dbce66bc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-ecs-arroyo",
            "aws_lb_target_group.lb-target-ecs-arroyo",
            "aws_subnet.arroyo_subnet_1",
            "aws_subnet.arroyo_subnet_2",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-ecs-arroyo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:302570658486:targetgroup/lb-target-ecs-arroyo/c7941f3e07984741",
            "arn_suffix": "targetgroup/lb-target-ecs-arroyo/c7941f3e07984741",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:302570658486:targetgroup/lb-target-ecs-arroyo/c7941f3e07984741",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "lb-target-ecs-arroyo",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "dependencies": [
            "aws_lb.lb-ecs-arroyo",
            "aws_subnet.arroyo_subnet_1",
            "aws_subnet.arroyo_subnet_2",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "arroyo_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05cd67093f764b71d",
            "id": "r-rtb-05070a5ea526ff1021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05070a5ea526ff102",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.arroyo_ecs_igw",
            "aws_route_table.arroyo_ecs_route_table",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "arroyo_ecs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:route-table/rtb-05070a5ea526ff102",
            "id": "rtb-05070a5ea526ff102",
            "owner_id": "302570658486",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arroyo_subnet_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f67d0695d460b3c0",
            "route_table_id": "rtb-05070a5ea526ff102",
            "subnet_id": "subnet-030ee9cf06446a3da"
          },
          "dependencies": [
            "aws_route_table.arroyo_ecs_route_table",
            "aws_subnet.arroyo_subnet_1",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "arroyo_subnet_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce8d4317b01ab3b",
            "route_table_id": "rtb-05070a5ea526ff102",
            "subnet_id": "subnet-02fed4577ac7c7ad8"
          },
          "dependencies": [
            "aws_route_table.arroyo_ecs_route_table",
            "aws_subnet.arroyo_subnet_2",
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_arroyo_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:security-group/sg-0c725af2f4a8a2fdb",
            "description": "Security group for ECS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c725af2f4a8a2fdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "302570658486",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arroyo_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:subnet/subnet-030ee9cf06446a3da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030ee9cf06446a3da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302570658486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "dependencies": [
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "arroyo_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:subnet/subnet-02fed4577ac7c7ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fed4577ac7c7ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302570658486",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0efd064f0c9a591e4"
          },
          "dependencies": [
            "aws_vpc.arroyo_ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "arroyo_ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:302570658486:vpc/vpc-0efd064f0c9a591e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c334cd5b229925db",
            "default_route_table_id": "rtb-0d665e0bddd0fbcdc",
            "default_security_group_id": "sg-05218acf0717e0a28",
            "dhcp_options_id": "dopt-0d6daceda005612c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efd064f0c9a591e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d665e0bddd0fbcdc",
            "owner_id": "302570658486"
          }
        }
      ]
    }
  ]
}